kubernetes/apps/dev-system/forgejo/app/tcproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/tcproute_v1alpha2.json
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: forgejo-ssh
spec:
  hostnames:
    - "ssh.forgejo.${DOMAIN1}"
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: ssh
  rules:
    - backendRefs:
        - name: forgejo
          port: 2222
